updated message scripts

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,13 @@
             text-decoration: none;
             cursor: pointer;
         }
+        body {
+            background-image: url('/static/earth-0rp0vszrdz909xc9.jpg');
+            background-size: cover; /* Ensure it covers the entire viewport */
+            background-position: center; /* Center the image */
+            background-repeat: no-repeat; /* Avoid repeating the image */
+        }
+        
     </style>
 </head>
 <body>
