--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,13 @@
 
     <style>
         /* Header styles */
+        h1{
+            color:white
+        }
+        h2{
+            color:white
+        }
+
         .header {
             background-color: #333;
             color: white;
@@ -90,7 +97,14 @@
             color: black;
             text-decoration: none;
             cursor: pointer;
-        }        
+        }    
+        
+        body {
+            background-image: url('/static/earth-0rp0vszrdz909xc9.jpg');
+            background-size: cover; /* Ensure it covers the entire viewport */
+            background-position: center; /* Center the image */
+            background-repeat: no-repeat; /* Avoid repeating the image */
+        }
     </style>
 </head>
 <body>
