--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         }
         /* Main container styles */
         .container {
-            padding-top: 200px;
+            padding-top: 100px;
             padding-bottom: 40px;
             width: 80%;
         }
@@ -58,6 +58,9 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+        .language-card:hover {
+            cursor: pointer;
+        }
         .language-card button {
             margin-top: 10px;
             padding: 10px 20px;
@@ -67,6 +70,9 @@
             color: white;
             border: none;
             border-radius: 5px;
+        }
+        .language-card button:hover {
+            background-color: #0d591e;
         }
         .language-card button:hover {
             background-color: #218838;
