--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
 
     <script>
         // Example list of languages
-        const languages = ['English', 'Spanish', 'French', 'German', 'Italian'];
+        const languages = ['English', 'Spanish', 'French', 'Czech'];
 
         // This will hold the user's favorites, using localStorage to persist across page reloads
         let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
@@ -192,6 +192,34 @@
             renderLanguages(); // Render the languages section
         };
 
+    </script>
+    <script>
+        // Get modal element and buttons
+        var modal = document.getElementById('info-modal');
+        var infoButton = document.getElementById('info-button');
+        var closeBtn = document.getElementsByClassName('close-btn')[0];
+
+        // Show the modal when the info button is clicked
+        infoButton.onclick = function() {
+            modal.style.display = "block";
+        }
+
+        // Close the modal when the X button is clicked
+        closeBtn.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // Close the modal if the user clicks outside the modal
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+
+        // Ensure modal is closed on page load
+        window.onload = function() {
+            modal.style.display = "none"; // Make sure the modal is closed
+        };
     </script>
 
 </body>
